# physical-geomorphometry-tools

./: .gitignore  LICENSE  README.md  index.html
fft-tools/: .gitignore  Cargo.toml  LICENSE  README.md
generalization/: .gitignore  Cargo.toml  README.md
generalization/src/: data.rs  helpers.rs  main.rs  math.rs  qem.rs  raster.rs  text.rs
lsp-calculator/: .gitignore  Cargo.toml  LICENSE  PARAMETERS.md  README.md
lsp-calculator/src/: geo.rs  helpers.rs  lsp.rs  main.rs  poly.rs  raster.rs  text.rs
segmentation/: README.md  dem_seg.dcp  import_dem_seg.xml  process_dem.py  segment_dem.py
segmentation/raster-tools/: Cargo.toml  README.md  build.rs
segmentation/raster-tools/src/: crop.rs  main.rs  normalize.rs  rescale.rs  text.rs
