[package]
name = "lsp_calculator"
description = "Tool for calculating Land Surface Parameters from an elevation raster."
readme = "README.md"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdal = "0.17.1"
clap = "4.5"
num_cpus = "1.16"
rand = "0.8"
nalgebra = "0.33"
