[package]
name = "lsp_calculator"
description = "Tool for calculating Land Surface Parameters from an elevation raster."
readme = "README.md"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdal = "0.18"
clap = "4.5"
num_cpus = "1.16"
rand = "0.8"
nalgebra = "0.33"
console = "0.15.11"

[build-dependencies]
vcpkg = "0.2"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]
