[package]
name = "raster_tools"
description = "Tool for raster processing: crop, normalize, rescale."
version = "1.0.0"
edition = "2021"
authors = ["Veronika Hajdúchová <veronika.hajduchova@uniba.sk>"]

[dependencies]
gdal = "0.17"
ndarray = { version = "0.15", features = ["rayon"] }
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
statrs = "0.17"
console = "0.15"

[build-dependencies]
vcpkg = "0.2"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]